# image-opt

./: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/actions/env-setup/: action.yml
.github/workflows/: pr-commit.yml  publish.yml
jpegli/: jpegli.ts
mozjpeg/dec/: mozjpeg_dec.cpp
mozjpeg/enc/: mozjpeg-color-space.ts
optimizers/jpegli/: jpegli.ts
optimizers/mozjpeg/: Dockerfile  Makefile  build.sh
optimizers/mozjpeg/enc/: mozjpeg_enc.cpp  mozjpeg_enc.d.ts  mozjpeg_enc.js
optimizers/oxipng/: Cargo.toml  build.sh
optimizers/oxipng/pkg/: image_opt.d.ts  image_opt.js  image_opt_bg.wasm.d.ts  image_opt_small.wasm  package.json
oxipng/: .gitignore
oxipng/src/: lib.rs
scripts/: release.cjs
web/: pnpm-lock.yaml
